# mahjong-app-engine

./: .coderabbit.yaml  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  pr-labeler.yml
.github/ISSUE_TEMPLATE/: bugfix.md  issue.md
.github/actions/docs/: action.yml
.github/workflows/: build-check.yml  doc.yml  pr_label.yml  release.yml  test.yml
ai_dll/: Cargo.toml
ai_dll/src/: consts.rs  lib.rs
dll/: Cargo.toml
dll/src/: consts.rs  lib.rs
fbs/: generate.ps1  generate.sh  mahjong.fbs
game_lib/: Cargo.toml
game_lib/src/: lib.rs
mahjong_core/: Cargo.toml
mahjong_core/src/: agari.rs  fbs_utils.rs  game_process.rs  lib.rs  load_pailist.rs  mahjong_generated.rs  play_log.rs  shanten.rs
mahjong_core/tests/: agari_test.rs  fbs_utils_test.rs  game_process_test.rs  load_pailist_test.rs  shanten_test.rs
mahjong_core/tests/data/: agaris.parquet  haiyamas-random.parquet  paiyamas-random.parquet
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
proc_macros/: Cargo.toml
sample/: Cargo.toml
sample/src/: main.rs
