[package]
name = "mahjong_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# write-log = ["dep:parquet", "dep:arrow-array"]
load-pailist = [] #["dep:parquet", "dep:arrow-array"]

[dependencies]
anyhow = "1.0.79"
arrow-array = { version = "50.0.0" }
arrow-schema = "50.0.0"
chrono = "0.4.33"
flatbuffers = "23.5.26"
itertools = "0.11.0"
parquet = { version = "50.0.0" }
rand = "0.8.5"
true = { version = "0.1.0", optional = true }
